# DriveMindr

./: .gitignore  DriveMindr_Project_Plan.docx  pyproject.toml
drivemindr/: __init__.py  classifier.py  config.py  dashboard.py  database.py  executor.py  main.py  network.py  safety.py  scanner.py  symlinks.py  undo.py  utils.py
scripts/: first_run.py
tests/: test_classifier.py  test_dashboard.py  test_database.py  test_executor.py  test_network.py  test_safety.py  test_scanner.py  test_utils.py
